added style.css and index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         </div>
     </div>
 
+    <hr>
+
 
     <div id="instructions">
 
@@ -36,23 +38,31 @@
         </div>
 
     </div>
-    <br><br><br>
 
-    <div id="total-score"> </div>
-    <div id="wins"> </div>
-    <div id="losses"> </div>
 
 
     <br><br><br>
+
+    <div class="scores">
+        <div class="target-score"> Target Score </div> <span id="targetScore"> </span>
+        <div class="your-score"> Your Score </div> <span id="yourScore"> </span>
+    </div>
+
+    
+
+
+    <br><br><br><br><br>
 
     <img src="assets/Images/Crystal1.png" alt="crystals" class="crystal" id="crystal-one">
     <img src="assets/Images/Crystal2.png" alt="crystals" class="crystal" id="crystal-two">
     <img src="assets/Images/Crystal3.png" alt="crystals" class="crystal" id="crystal-three">
     <img src="assets/Images/Crystal4.png" alt="crystals" class="crystal" id="crystal-four">
 
-    
-    <div id="your-total-score"> </div>
 
+    <div class="wins"> Wins : <span id="winScore"> </span> </div>
+    <div class="losses"> Losses : <span id="lossScore"></span> </div>
+
+    <br><br><br>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
