added audio style.css game.js index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <button id="how-to-play"> How To Play? </button>
         </div>
     </div>
-
+    <audio controls>
+        <source src="assets/audio/water.mp3" type="audio/mp3">
+    </audio>
     <hr>
 
 
