--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1> Crytals Collector </h1>
+    <h1> Crystal Collector </h1>
 
     <!-- Button design Experiment -->
     <div class="wrapper">
