game.js index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/reset.css/">  
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- <link rel="stylesheet" href="assets/css/reset.css/"> I started without the reset.css. When I added it it messed up the position of the items.-->
     <link href="https://fonts.googleapis.com/css?family=Unlock" rel="stylesheet">
     <title>Crystal Collector</title>
 </head>
